# practical_7

exe/: CMakeLists.txt
exe/src/: main.cpp
lib/: CMakeLists.txt
lib/src/: export.h  matrix.cpp  matrix.h
lib/src/c/: c_api.cpp  c_api.h
